--- a/orar.html
+++ b/orar.html
@@ -38,8 +38,8 @@
 </head>
 <body>
     <img src="https://cst-media.s3.amazonaws.com/graphic/cst-logo-black-web.jpg" alt="Charles Simeon Trust Logo" style="display: block; margin: 0 auto; width: 200px;">
-    <h1>Workshop on Biblical Exposition</h1>
-    <h2>Preaching the Gospels: John</h2>
+    <h1>Seminar de predicare expozitivă biblică</h1>
+    <h2>Predicarea din Evanghelii: Ioan</h2>
     <h3>Cluj-Napoca, România</h3>
     
     <div class="day">
