--- a/grupe.html
+++ b/grupe.html
@@ -61,7 +61,7 @@
             <p class="person">Trufan Ionuț - Ioan 2:1-12, Ioan 12:20-36</p>
             <p class="person">Iosif Căpușneanu - Ioan 4:1-26, Ioan 17</p>
             <p class="person">Andrei Bușui - Ioan 7:1-44, Ioan 20:11-18</p>
-            <p class="person"><span class="role">OBS:</span> Căpușneanu Robert Niko - Ioan 7:1-45, Ioan 20:11-19</p>
+            <p class="person"><span class="role">OBS:</span> Paul Cathey - Ioan 2:1-12, Ioan 12:20-36</p>
         </div>
 
         <div class="group">
@@ -74,7 +74,7 @@
             <p class="person">Birca Daniel - Ioan 2:1-12, Ioan 12:20-36</p>
             <p class="person">David Traian - Ioan 4:1-26, Ioan 17</p>
             <p class="person">Nicolae Matei - Ioan 7:1-44, Ioan 20:11-18</p>
-            <p class="person"><span class="role">OBS:</span> Miculaiciuc Ștefan</p>
+            <p class="person"><span class="role">OBS:</span> Edgar Maron - Ioan 7:1-44, Ioan 20:11-18</p>
         </div>
 
         <div class="group">
@@ -84,10 +84,9 @@
             <p class="person"><span class="role">APP:</span> Neemia Faur - Ioan 4:1-26, Ioan 17</p>
             <p class="person">Dodan Lucian Beniamin - Ioan 7:1-44, Ioan 20:11-18</p>
             <p class="person">Oliviu Chira - Ioan 1:1-18, Ioan 11:1-27</p>
-            <p class="person">Ionut Ignat - Ioan 2:1-12, Ioan 12:20-36</p>
-            <p class="person">Adrian Balta - Ioan 4:1-26, Ioan 17</p>
-            <p class="person">Marcu Victor Vlad - Ioan 7:1-44, Ioan 20:11-18</p>
-            <p class="person"><span class="role">OBS:</span> Doru Marușca - Ioan 4:1-26, Ioan 17</p>
+            <p class="person">Doru Marușca - Ioan 4:1-26, Ioan 17</p>
+            <p class="person">Adrian Balta - Ioan 4:1-26, Ioan 17</p>       
+            <p class="person"><span class="role">OBS:</span> Miculaiciuc Ștefan </p>
         </div>
   
         <div class="group">
@@ -100,18 +99,18 @@
             <p class="person">Teliceanu Ciprian 	Ioan 2:1-12	Ioan 12:20-36            </p>
             <p class="person">Macavei Rares	Ioan 4:1-26	Ioan 17            </p>
             <p class="person">Ferent-Marian Moldovan	Ioan 7:1-44	Ioan 20:11-18            </p>
-            <p class="person"><span class="role">OBS:</span> Doru Marușca - Ioan 4:1-26, Ioan 17</p>
+            <p class="person"><span class="role">OBS:</span> Liviu Ungur</p>
         </div>
         <div class="group">
             <p class="leader">SGL: Daniel Suciu</p>
             <p class="person">Torok Alin	Ioan 1:1-18	Ioan 11:1-27            </p>
             <p class="person">Laurentiu Mateut 	Ioan 2:1-12	Ioan 12:20-36</p>            
             <p class="person">Coman Andi	Ioan 4:1-26	Ioan 17            </p>            
-            <p class="person">Edgar Maron	Ioan 7:1-44	Ioan 20:11-18            </p>
+            <p class="person">Căpușneanu Robert Niko -  Ioan 7:1-44, Ioan 20:11-18      </p>
             <p class="person"><span class="role">APP:</span> Varan Sabin	Ioan 1:1-18	Ioan 11:1-27            </p>
-            <p class="person">Ardelean Sergiu	Ioan 2:1-12	Ioan 12:20-36            </p>
-            <p class="person">Calalb Alexandru	Ioan 4:1-26	Ioan 17            </p>
-            <p class="person">Guzu Daniel Emanuel	Ioan 7:1-44	Ioan 20:11-18           </p>
+            <p class="person">Ardelean Sergiu	Ioan 2:1-12	Ioan 12:20-36            </p>            
+            <p class="person">Timotei Caracoancea Ioan 4:1-26, Ioan 17</p>            
+            <p class="person">Titus Marusca - Ioan 7:1-44, Ioan 20:11-18   </p>
             <p class="person"><span class="role">OBS:</span>Saron Ciupe	Ioan 1:1-18	Ioan 11:1-27</p>
         </div>
     </div>
