--- a/ghid.html
+++ b/ghid.html
@@ -56,6 +56,9 @@
 </head>
 <body>
     <header>
+        <a href="index.html"> <img src="https://cst-media.s3.amazonaws.com/graphic/cst-logo-black-web.jpg" alt="Charles Simeon Trust Logo" style="display: block; margin: 0 auto; width: 200px;">
+            
+        </a>
         <h1>Ghid de Pregătire a Fișei de Lucru</h1>        
         <h2>SEMINAR DE PREDICARE EXPOZITIVĂ BIBLICĂ</h2>
     </header>
