--- a/orar.html
+++ b/orar.html
@@ -37,34 +37,33 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Brandon+Grotesque:400,700&display=swap">
 </head>
 <body>
-    <img src="https://cst-media.s3.amazonaws.com/graphic/cst-logo-black-web.jpg" alt="Charles Simeon Trust Logo" style="display: block; margin: 0 auto; width: 200px;">
+    <a href="index.html"> <img src="https://cst-media.s3.amazonaws.com/graphic/cst-logo-black-web.jpg" alt="Charles Simeon Trust Logo" style="display: block; margin: 0 auto; width: 200px;">            
+    </a>
     <h1>Seminar de predicare expozitivă biblică</h1>
     <h2>Predicarea din Evanghelii: Ioan</h2>
     <h3>Cluj-Napoca, România</h3>
     
     <div class="day">
-        <h2>Miercuri, 19 Martie</h2>
-        <p>14:00 - Sosire și Înregistrare</p>
-        <p>14:15 - Bun venit - Mitraș Dudaș</p>
-        <p>14:30 - Instruire 1: Diego Lopes - Calea pentru Pregătire</p>
-        <p>15:30 - Pauză</p>
-        <p>15:45 - Instruire 2: Samuel Clintoc - Structură</p>
-        <p>16:45 - Pauză</p>
-        <p>17:00 - Expunere 1: Ovidiu Hanc - Ioan 1:19-51</p>
-        <p>17:30 - Încheiere</p>
+        <h2>Miercuri, 19 Martie</h2>        
+        <p>14:00 - Bun venit - Mitraș Dudaș</p>
+        <p>14:15 - Instruire 1: Diego Lopes - Traseul pregătirii</p>
+        <p>15:15 - Pauză</p>
+        <p>15:30 - Instruire 2: Samuel Clintoc - Structură</p>
+        <p>16:30 - Pauză</p>
+        <p>16:45 - Expunere 1: Ovidiu Hanc - Ioan 1:19-51</p>
+        <p>17:15 - Încheiere</p>
     </div>
     
     <div class="day">
         <h2>Joi, 20 Martie</h2>
         <p>09:00 - Sosire</p>
-        <p>09:15 - Instruire 3: Diego Lopes - Context</p>
+        <p>09:15 - Instruire 3: Diego Lopes - Contextul</p>
         <p>10:15 - Pauză</p>
         <p>10:30 - Grup Mic 1: Ioan 1:1-18 & Ioan 2:1-12</p>
         <p>12:00 - Prânz</p>
-        <p>12:45 - Anunțuri: Anunțuri de Training</p>
-        <p>12:55 - Întrebări și Răspunsuri (Toți vorbitorii)</p>
-        <p>13:25 - Pauză</p>
-        <p>13:30 - Instruire 4: Samuel Clintoc - Conectarea la Evanghelie</p>
+        <p>12:45 - Anunțuri / Fotografie de grup</p>
+        <p>13:00 - Întrebări și Răspunsuri </p>        
+        <p>13:30 - Instruire 4: Samuel Clintoc - Legătura cu Evanghelia</p>
         <p>14:30 - Pauză</p>
         <p>14:45 - Grup Mic 2: Ioan 4:1-26 & Ioan 7:1-44</p>
         <p>16:15 - Pauză</p>
@@ -79,6 +78,7 @@
         <p>10:15 - Pauză</p>
         <p>10:30 - Grup Mic 3: Ioan 11:1-27 & Ioan 12:20-36</p>
         <p>12:00 - Prânz</p>
+        <p>12:40 - Anunț: Formulare de Feedback</p>
         <p>12:45 - Instruire 6: Samuel Clintoc - Aplicație</p>
         <p>13:45 - Anunț: Formulare de Feedback</p>
         <p>14:00 - Pauză</p>
