--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CST Cluj 2025</title>
+    <script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,19 +27,39 @@
             border-radius: 50%;
         }
         .links a {
-            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
             background: #a39680;
             color: white;
             text-decoration: none;
-            padding: 15px;
+            padding: 12px;
             margin: 10px 0;
             border-radius: 5px;
             transition: 0.3s;
+            font-size: 18px;
+            width: 100%;
+            max-width: 360px;
+            margin-left: auto;
+            margin-right: auto;
+            position: relative;
         }
         .links a:hover {
-            background: #a39680;
+            background: #8d806b;
+        }
+        .links i {
+            font-size: 24px;
+            position: absolute;
+            left: 15px;
+        }
+        .links span {
+            flex-grow: 1;
+            text-align: center;
         }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 </head>
 <body>
     <div class="container">
@@ -47,10 +69,12 @@
             <p>Charles Simeon Trust Workshop - Biblical Exposition | 19-21 martie 2025</p>
         </div>
         <div class="links">
-            <a href="orar.html" >Orar</a>
-            <a href="ghid.html" >Ghid pregatire</a>
-            <a href="grupe.html" >Impartirea pe grupe</a>
-            <a href="notebook.docx">Notebook participant (.docx)</a>
+            <a href="orar.html" ><i class="fa-solid fa-timeline"></i></i>Orar</a>
+            <a href="grupe.html" ><i class="fa-solid fa-people-arrows"></i>Impartirea pe grupe</a>
+            <a href="ghid.html" ><i class="fa-solid fa-glasses"></i>Ghid pregatire</a>            
+            <a href="notebook.docx"><i class="fa-solid fa-book"></i>Notebook participant (.docx)</a>
+            <a href="https://simeontrust.org/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></i>simeontrust.org</a>            
+            <a href="https://forms.gle/CWyr9GgmKQVPbDjY9" target="_blank"><i class="fa-solid fa-star"></i></i>Evaluare - feedback</a>
         </div>
     </div>
 </body>
