--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
             padding: 20px;
         }
         .container {
-            max-width: 400px;
+            max-width: 100%;
             margin: 0 auto;
             background: white;
+            overflow-x: auto;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
@@ -59,7 +60,7 @@
         }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="container">
