--- a/index.html
+++ b/index.html
@@ -30,34 +30,35 @@
         .links a {
             display: flex;
             align-items: center;
-            justify-content: center;
-            gap: 10px;
             background: #a39680;
             color: white;
             text-decoration: none;
             padding: 12px;
-            margin: 10px 0;
+            margin: 10px auto;            
             border-radius: 5px;
             transition: 0.3s;
             font-size: 18px;
             width: 100%;
             max-width: 360px;
-            margin-left: auto;
-            margin-right: auto;
-            position: relative;
+            text-align: center;
+            justify-content: flex-start;
+            padding-right: 10px; 
         }
+
+        .links i {
+            font-size: 24px;            
+            flex-shrink: 0;
+        }
+
+        .links span {
+            flex-grow: 1;
+            text-align: center; 
+        }
+
         .links a:hover {
             background: #8d806b;
         }
-        .links i {
-            font-size: 24px;
-            position: absolute;
-            left: 15px;
-        }
-        .links span {
-            flex-grow: 1;
-            text-align: center;
-        }
+
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -70,12 +71,12 @@
             <p>Charles Simeon Trust Workshop - Biblical Exposition | 19-21 martie 2025</p>
         </div>
         <div class="links">
-            <a href="orar.html" ><i class="fa-solid fa-timeline"></i></i>Orar</a>
-            <a href="grupe.html" ><i class="fa-solid fa-people-arrows"></i>Impartirea pe grupe</a>
-            <a href="ghid.html" ><i class="fa-solid fa-glasses"></i>Ghid pregatire</a>            
-            <a href="notebook.docx"><i class="fa-solid fa-book"></i>Notebook participant (.docx)</a>
-            <a href="https://simeontrust.org/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></i>simeontrust.org</a>            
-            <a href="https://forms.gle/CWyr9GgmKQVPbDjY9" target="_blank"><i class="fa-solid fa-star"></i></i>Evaluare - feedback</a>
+            <a href="orar.html" ><i class="fa-solid fa-timeline"></i><span>Orar</span></a>
+            <a href="grupe.html" ><i class="fa-solid fa-people-arrows"></i><span>Impartirea pe grupe</span></a>
+            <a href="ghid.html" ><i class="fa-solid fa-glasses"></i><span>Ghid pregatire</span></a>            
+            <a href="notebook.docx"><i class="fa-solid fa-book"></i><span>Notebook participant (.docx)</span></a>
+            <a href="https://simeontrust.org/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i><span>simeontrust.org</span></a>            
+            <a href="https://forms.gle/CWyr9GgmKQVPbDjY9" target="_blank"><i class="fa-solid fa-star"></i><span>Evaluare - feedback</span></a>
         </div>
     </div>
 </body>
