--- a/ghid.html
+++ b/ghid.html
@@ -17,6 +17,7 @@
         h1, h2, h3 {
             text-align: center;
             color: #a39680;
+            margin: 5px;
         }
         .content-section {
             margin-bottom: 20px;
@@ -44,6 +45,7 @@
         .download {
             text-align: center;
             margin-top: 20px;
+            margin-bottom: 10px;
         }
         .download a {
             background: #a39680;
@@ -62,7 +64,9 @@
         <h1>Ghid de Pregătire a Fișei de Lucru</h1>        
         <h2>SEMINAR DE PREDICARE EXPOZITIVĂ BIBLICĂ</h2>
     </header>
-
+    <div class="download">
+        <a href="ghid.pdf" download>📥 Descarcă PDF</a>
+    </div>
     <div class="toc">
         <h2>Cuprins</h2>
         <ul>
@@ -182,11 +186,7 @@
         
         <h3>Ce se întâmplă dacă greșesc?</h3>
         <p>Aceasta este ultima întrebare inclusă aici, dar adesea este prima la care se gândesc toți. Este în regulă să fii emoționat. Cu toții ne facem griji cu privire la a mânui bine Cuvântul lui Dumnezeu. În calitate de creștini, recunoaștem că procesul de învățare este continuu. Întotdeauna putem fi scoși din zona de confort în modalități noi. O parte din speranța care însoțește sesiunile de instruire interactivă și aceste discuții în grupuri mici este că și instructorii și conducătorii grupurilor mici învață, la rândul lor, lucruri noi. Conducătorii grupurilor mici cultivă un mediu colegial în care fiecare va fi încurajat și ajutat să crească. Cei mai mulți dintre noi nu suntem obișnuiți cu a ne fi evaluată munca de alții, dar cu toții vom descoperi că este ceva neprețuit în a ne ajuta să creștem ca predicatori și învățători. Așadar, bucură-te de acest seminar!</p>
-    </section>
-    <div class="download">
-        <a href="ghid.pdf" download>📥 Descarcă PDF</a>
-    </div>
-    
+    </section>    
     <footer>
         <p>CHARLES SIMEON TRUST © 2025</p>
     </footer>
