--- a/ghid.html
+++ b/ghid.html
@@ -65,7 +65,7 @@
         <h2>SEMINAR DE PREDICARE EXPOZITIVĂ BIBLICĂ</h2>
     </header>
     <div class="download">
-        <a href="ghid.pdf" download>📥 Descarcă PDF</a>
+        <a href="assets/ghid.pdf" download>📥 Descarcă PDF</a>
     </div>
     <div class="toc">
         <h2>Cuprins</h2>
