--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <a href="orar.html" ><i class="fa-solid fa-timeline"></i><span>Orar</span></a>
             <a href="grupe.html" ><i class="fa-solid fa-people-arrows"></i><span>Impartirea pe grupe</span></a>
             <a href="ghid.html" ><i class="fa-solid fa-glasses"></i><span>Ghid pregatire</span></a>            
-            <a href="notebook.docx"><i class="fa-solid fa-book"></i><span>Notebook participant (.docx)</span></a>
+            <a href="assets/notebook.docx"><i class="fa-solid fa-book"></i><span>Notebook participant (.docx)</span></a>
             <a href="https://simeontrust.org/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i><span>simeontrust.org</span></a>            
             <a href="https://forms.gle/CWyr9GgmKQVPbDjY9" target="_blank"><i class="fa-solid fa-star"></i><span>Evaluare - feedback</span></a>
         </div>
