--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <div class="container">
         <div class="profile">
             <img src="https://cst-media.s3.amazonaws.com/graphic/cst-logo-black-web.jpg" alt="Charles Simeon Trust Logo" style="display: block; margin: 0 auto; width: 200px;">
-            <h2>Workshop CST, Cluj 2025</h2>
-            <p>Charles Simeon Trust Workshop - Biblical Exposition | 19-21 martie 2025</p>
+            <h2>Seminar de predicare expozitivă biblică </h2>
+            <p>19-21 martie 2025 | Cluj-Napoca </p>
         </div>
         <div class="links">
             <a href="orar.html" ><i class="fa-solid fa-timeline"></i><span>Orar</span></a>
