--- a/orar.html
+++ b/orar.html
@@ -17,6 +17,7 @@
         h1, h2, h3 {
             text-align: center;
             color: #a39680;
+            margin: 5px;
         }
         .day {
             margin-bottom: 20px;
@@ -40,7 +41,7 @@
     <a href="index.html"> <img src="https://cst-media.s3.amazonaws.com/graphic/cst-logo-black-web.jpg" alt="Charles Simeon Trust Logo" style="display: block; margin: 0 auto; width: 200px;">            
     </a>
     <h1>Seminar de predicare expozitivă biblică</h1>
-    <h2>Predicarea din Evanghelii: Ioan</h2>
+    <h2>Predicarea din Evanghelii: <u>Ioan</u></h2>
     <h3>Cluj-Napoca, România</h3>
     
     <div class="day">
