--- a/grupe.html
+++ b/grupe.html
@@ -24,6 +24,7 @@
             padding: 10px;
             border-radius: 5px;
             text-align: center;
+            margin: 5px;
         }
         .group {
             margin-bottom: 20px;
