fix navigation path to index

--- a/ghid.html
+++ b/ghid.html
@@ -61,7 +61,7 @@
   </head>
   <body>
     <header>
-      <a href="../">
+      <a href=".">
         <img
           src="https://cst-media.s3.amazonaws.com/graphic/cst-logo-black-web.jpg"
           alt="Charles Simeon Trust Logo"
