--- a/grupe.html
+++ b/grupe.html
@@ -50,7 +50,7 @@
   </head>
   <body>
     <div class="container">
-      <a href="../">
+      <a href=".">
         <img
           src="https://cst-media.s3.amazonaws.com/graphic/cst-logo-black-web.jpg"
           alt="Charles Simeon Trust Logo"
