--- a/orar.html
+++ b/orar.html
@@ -44,7 +44,7 @@
     <link rel="icon" type="image/png" href="assets/favicon.png" />
   </head>
   <body>
-    <a href="../">
+    <a href=".">
       <img
         src="https://cst-media.s3.amazonaws.com/graphic/cst-logo-black-web.jpg"
         alt="Charles Simeon Trust Logo"
