--- a/ghid.html
+++ b/ghid.html
@@ -213,15 +213,30 @@
           unor aspecte precum intriga (sau arcul narativ), personajele
           (similaritate și contrast) sau alte procedee literare (e.g., momentul
           din zi, schimbarea locului). Poate că cea mai întâlnită trăsătură
-          literară este intriga, care are o formă distinctivă: 1) cadrul (care
-          include prezentarea personajelor, timpul, locul), 2) conflictul (sau
-          amplificarea acțiunii, un incident declanșator care necesită o
-          corectare sau soluționare), 3) punctul culminant (punctul de cotitură
-          al relatării, momentul din care este pusă în mișcare rezolvare și de
-          la care aceasta devine necesară sau inevitabilă), 4) rezolvarea
-          (implementarea efectivă a soluției în cadrul conflictului) și 5)
-          cadrul cel nou (sau stază, schimbarea intervenind din pricina arcului
-          narativ, care deschide calea pentru următorul arc narativ).
+          literară este intriga, care are o formă distinctivă:
+          <ol>
+            <li>
+              cadrul (care include prezentarea personajelor, timpul, locul)
+            </li>
+            <li>
+              conflictul (sau amplificarea acțiunii, un incident declanșator
+              care necesită o corectare sau soluționare),
+            </li>
+            <li>
+              punctul culminant (punctul de cotitură al relatării, momentul din
+              care este pusă în mișcare rezolvare și de la care aceasta devine
+              necesară sau inevitabilă),
+            </li>
+            <li>
+              rezolvarea (implementarea efectivă a soluției în cadrul
+              conflictului) și
+            </li>
+            <li>
+              cadrul cel nou (sau stază, schimbarea intervenind din pricina
+              arcului narativ, care deschide calea pentru următorul arc
+              narativ).
+            </li>
+          </ol>
         </li>
         <li>
           <strong>Pentru poezie:</strong> acest tip de text se găsește în
