bold some keywords

--- a/ghid.html
+++ b/ghid.html
@@ -120,7 +120,7 @@
         structură?
       </p>
       <p>
-        Structura (sau modalitatea de organizare) folosită de autor este un fel
+        <strong>Structura</strong> (sau modalitatea de organizare) folosită de autor este un fel
         de a vorbi despre forma sau conformația unui pasaj biblic. Dincolo de
         suprafața oricărui pasaj se află o așezare interioară a materialului și
         o aranjare logică pe care autorul a folosit-o pentru a organiza pasajul.
@@ -138,7 +138,7 @@
         potrivit termenul de macrostructură.
       </p>
       <p>
-        De reținut că structura va dezvălui un accent pe care autorul îl pune și
+        De reținut că structura va dezvălui <strong>un accent</strong> pe care autorul îl pune și
         pe care l-a comunicat prin intermediul structurii. Acesta este motivul
         pentru care înțelegerea derulării pasajului, nu doar a părților, este
         atât de important. Gândește-te la structură și la modul în care părțile
@@ -147,7 +147,7 @@
       </p>
       <p>
         În cele din urmă, explică în ce fel ai ajuns la acea structură sau ce
-        strategii ai folosit pentru a o găsi. Vrem să vedem raționamentul din
+        <strong>strategii</strong> ai folosit pentru a o găsi. Vrem să vedem raționamentul din
         spatele muncii tale și felul în care încerci să identifici accentul
         dintr-un pasaj.
       </p>
